--- a/arch/arm/configs/s5501_defconfig
+++ b/arch/arm/configs/s5501_defconfig
@@ -1724,7 +1724,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
 CONFIG_TOUCHSCREEN_MTK=y
-CONFIG_TOUCHSCREEN_MTK_GT9XX=y
+# CONFIG_TOUCHSCREEN_MTK_GT9XX=y
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_SCP is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT is not set
 # CONFIG_TOUCHSCREEN_MTK_GT9XX_HOTKNOT_S5400 is not set
@@ -1736,7 +1736,7 @@ CONFIG_TOUCHSCREEN_MTK_GT9XX=y
 # CONFIG_GT9XX_HOTKNOT_FLASHLESS is not set
 # CONFIG_MTK_FT5406 is not set
 # CONFIG_MTK_FT5406_82 is not set
-# CONFIG_MTK_FT5206 is not set
+CONFIG_MTK_FT5206 is not set
 # CONFIG_MTK_FT6X06_S5400 is not set
 # CONFIG_MTK_MMS134 is not set
 # CONFIG_MTK_MMS128 is not set
